--- a/html/activities/index.html
+++ b/html/activities/index.html
@@ -8,6 +8,9 @@
   <!-- CSS -->
   <link rel="stylesheet" href="../../css/styles.css">
 
+  <!-- Icon -->
+  <link rel="icon" href="../../images/favicon.ico">
+
   <!-- FONTS -->
   <link rel="preconnect" href="https://fonts.googleapis.com">
   <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
@@ -55,8 +58,8 @@
       </button>
     </header>
 
-    <div class="side-to-side table-select-action-buttons">
-      <div>
+    <div class="side-to-side">
+      <div class="table-select-action-buttons">
         <div class="container hidden" id="tableSelectOptions">
           <div class="row-flex">
             <button class="btn btn-submit" onclick="togglePopup('deleteRow')">
