--- a/html/authentication/verified.html
+++ b/html/authentication/verified.html
@@ -8,6 +8,9 @@
   <!-- CSS -->
   <link rel="stylesheet" href="../../css/styles.css">
 
+  <!-- Icon -->
+  <link rel="icon" href="../../images/favicon.ico">
+
   <!-- FONTS -->
   <link rel="preconnect" href="https://fonts.googleapis.com">
   <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
