--- a/index.html
+++ b/index.html
@@ -47,7 +47,7 @@
           <input class="input" type="password" id="passwordInput" name="password" placeholder="Insert your Password here">
 
           <label for="captchaInput">Enter CAPTCHA</label>
-          <img src="" alt="captcha text" style="display: block; height: 3rem;">
+          <img src="images/captcha.png" alt="captcha text" style="display: block; height: 3rem;">
 
           <span class="captcha-input">
             <i class="fa-solid fa-arrow-rotate-right icon"></i>
