added baptismal cert

--- a/html/events/details/baptismal.html
+++ b/html/events/details/baptismal.html
@@ -53,7 +53,7 @@
     <header class="section-header" id="certificateHeader">
       <div class="side-to-side">
         <h2 class="section-heading">Baptismal | Name</h2>
-        <button class="btn" type="button" name="button">Create Certificate</button>
+        <button class="btn" type="button" onclick="changePage('../certificate/baptismal-form.html')">Create Certificate</button>
       </div>
     </header>
 
