--- a/base.html
+++ b/base.html
@@ -8,6 +8,9 @@
   <!-- CSS -->
   <link rel="stylesheet" href="css/styles.css">
 
+  <!-- Icon -->
+  <link rel="icon" href="images/favicon.ico">
+
   <!-- FONTS -->
   <link rel="preconnect" href="https://fonts.googleapis.com">
   <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
@@ -56,7 +59,7 @@
     </nav>
   </section>
 
-  <main class="content" style="padding: 0;">
+  <main class="content">
     <header class="section-header">
       <h2 class="section-heading">Page Title</h2>
     </header>
