fixed visual bug

--- a/html/events/index.html
+++ b/html/events/index.html
@@ -190,7 +190,7 @@
             <td>Weading</td>
             <td>Mr. and Mrs. Wed</td>
             <td>MMMM dd, YYYY</td>
-            <td><button class="btn btn-certificate disabled" type="button" name="button" disabled>Certificate</button></td>
+            <td><button class="btn btn-certificate disabled" type="button" name="button">Certificate</button></td>
           </tr>
 
           <tr id="event9" onclick="getData('other', 123123)" class="done">
@@ -370,7 +370,7 @@
           <!-- <h1 class="resultText">Request Granted</h1> -->
           <!-- <h1 class="resultText">Request Failed <br> Try Again</h1> -->
 
-          <input class="btn btn-neutral" type="button" value="Verify" onclick="togglePopup('resultCode')">
+          <input class="btn btn-neutral" type="button" value="OK" onclick="togglePopup('resultCode')">
         </form>
       </div>
     </div>
