fixed activity details bug

--- a/html/activities/activity-details.html
+++ b/html/activities/activity-details.html
@@ -61,35 +61,35 @@
         <div class="row-flex">
           <span class="col-12">
             <label label for="">Activity Name</label>
-            <input class="input" type="text">
+            <input class="input" type="text" disabled>
           </span>
 
           <span class="col-12">
             <label label for="">Location</label>
-            <input class="input" type="text">
+            <input class="input" type="text" disabled>
           </span>
 
           <div class="row-flex col-12">
             <div class="col-9">
               <label label for="">Organizer's Name</label>
-              <input class="input" type="text" name="" value="" placeholder="Insert organizer's name here">
+              <input class="input" type="text" name="" value="" disabled>
 
               <label>Description</label>
-              <textarea class="input textarea" name="name" rows="9" placeholder="Insert description here"></textarea>
+              <textarea class="input textarea" name="name" rows="9" disabled></textarea>
             </div>
 
             <div class="col-3">
               <label label for="">Contact Number</label>
-              <input class="input" type="text">
+              <input class="input" type="text" disabled>
 
               <label>Date</label>
-              <input class="input" type="date">
+              <input class="input" type="date" disabled>
 
               <label>Time</label>
-              <input class="input" type="Time">
+              <input class="input" type="Time" disabled>
 
               <label label for="">Budget</label>
-              <input class="input" type="text">
+              <input class="input" type="text" disabled>
             </div>
           </div>
 
